<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jpareja.campusmovil.AcademicoActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff113b95"
        android:id="@+id/imgVwlogo"
        />

    <TextView
        android:id="@+id/txtVwAcademico"
        android:text="@string/academico"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#ffe2ac1c"
        android:capitalize="words"
        android:textColor="#ff050608"
        android:textSize="18dp"
        android:layout_below="@+id/imgVwlogo"
        android:layout_alignLeft="@+id/imgVwlogo"
        android:layout_alignStart="@+id/imgVwlogo"
    />

    <LinearLayout
        android:id="@+id/marcoconsultas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_below="@+id/txtVwAcademico"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtVwMatriculas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18dp"
            android:text="@string/matricula"
            android:textColor="#fff9fffd"
            android:background="#ff113b95"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/txtVwAcademico"
        />

        <Button
            android:id="@+id/btnMatricular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="#FFFFFF"
            android:text="@string/matricula"
            android:layout_below="@id/txtVwMatriculas"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
        />
        <Button
            android:id="@+id/btnConsultaMatricular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="#FFFFFF"
            android:text="@string/consultamatricula"
            android:layout_below="@id/btnMatricular"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/txtVwNotas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18dp"
            android:text="@string/consultarnotas"
            android:textColor="#fff9fffd"
            android:background="#ff113b95"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@id/txtVwAcademico"
            />
        <Button
            android:id="@+id/btnnotasactuales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="#FFFFFF"
            android:text="@string/notasactuales"
            android:layout_below="@id/txtVwNotas"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            />
        <Button
            android:id="@+id/btnregistroext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:background="#FFFFFF"
            android:text="@string/registroext"
            android:layout_below="@id/btnnotasactuales"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            />

    </LinearLayout>


</RelativeLayout>
