<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.jpareja.campusmovil.NotasMateriaActivity">

    <ImageView
            android:src="@drawable/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff113b95"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

    <TextView
            android:id="@+id/textView"
            android:text="@string/titsotasmateria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#ffe2ac1c"
            android:capitalize="words"
            android:textColor="#ff050608"
            android:textSize="18dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_pparcial"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textSize="24sp"
                android:layout_toStartOf="@+id/txtNotaPParcial"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New 0"
                android:id="@+id/txtNotaPParcial"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:textSize="24sp"
                android:textAlignment="textEnd"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sparcial"
                android:id="@+id/textViewSP"
                android:textSize="24sp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/textView2"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_tparcial"
                android:id="@+id/textView5"
                android:textSize="24sp"
                android:layout_below="@+id/textViewSP"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/textViewSP"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_notasvarias"
                android:id="@+id/textView7"
                android:textSize="24sp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView5"
                android:layout_alignEnd="@+id/textView5"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_notaproyecto"
                android:id="@+id/textView3"
                android:textSize="24sp"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/textView7"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New 0"
                android:id="@+id/txtNotaSParcial"
                android:textSize="24sp"
                android:layout_below="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:textAlignment="textEnd"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New 0"
                android:id="@+id/txtNotaTParcial"
                android:textSize="24sp"
                android:layout_below="@+id/txtNotaSParcial"
                android:layout_alignStart="@+id/txtNotaSParcial"
                android:textAlignment="textEnd"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New 0"
                android:id="@+id/txtNotaVarias"
                android:textSize="24sp"
                android:layout_below="@+id/textView5"
                android:layout_toEndOf="@+id/textView5"
                android:textAlignment="textEnd"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New 0"
                android:id="@+id/txtNotaProyecto"
                android:textSize="24sp"
                android:layout_alignTop="@+id/textView3"
                android:layout_alignStart="@+id/txtNotaVarias"
                android:textAlignment="textEnd"/>

    </RelativeLayout>
</RelativeLayout>
